// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input/> component Render Input component - check error message 1`] = `
<div
  class="inputContainer"
  data-testid="input-test-id"
>
  <div
    class="inputWrapper"
  >
    <input
      class="input error"
      placeholder="input test"
      type="text"
    />
  </div>
  <span
    class="errorMessage"
  >
    input error message
  </span>
</div>
`;

exports[`<Input/> component Render Input component - disabled input 1`] = `
<input
  class="input"
  disabled=""
  placeholder="input test"
  type="text"
/>
`;

exports[`<Input/> component Render Input component - without any properties 1`] = `
<div
  class="inputContainer"
  data-testid="input-test-id"
>
  <div
    class="inputWrapper"
  >
    <input
      class="input"
      type="text"
    />
  </div>
</div>
`;
